chore: update eval results
Signed-off-by: KimSia, Sim <245021+simkimsia@users.noreply.github.com>

--- a/evaluation/results/law_firm_docs_10lzj5_20250520_1704.md
+++ b/evaluation/results/law_firm_docs_10lzj5_20250520_1704.md
@@ -7,3 +7,21 @@ The before and after results
 pylint: 5.53
 coverage: 90
 template_issues: 40
+
+## After Claude 3.7 Sonnet
+
+- Prompts: 1
+- Work end to end: Yes
+- tests passed: 4/5
+- pylint: 5.28
+- coverage: 78
+- template_issues: 48
+
+## After Gemini 2.5 Pro
+
+- Prompts: 1
+- Work end to end: Yes
+- tests passed: 5/5
+- pylint: 5.45
+- coverage: 85
+- template_issues: 46
